# Character

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt  main.cc
app/: CMakeLists.txt  main_window.cc  main_window.h
app/config/: config_manager.cc  config_manager.h  user_config.h.in
app/dialog/: about_dialog.cc  about_dialog.h
app/gui/: main_window.cc  main_window.h
app/gui/dialog/: about_dialog.cc  about_dialog.h  export_dialog.cc  export_dialog.h
app/gui/style/: color_constant.h  default_style.h
app/gui/tab/: bottom_tab_widget.cc  bottom_tab_widget.h  left_tab_widget.cc  left_tab_widget.h  right_tab_widget.cc  right_tab_widget.h  tab_widget.cc  tab_widget.h
app/gui/toolbar/: middle_tool_bar.cc  middle_tool_bar.h  status_bar.cc  status_bar.h  top_tool_bar.cc  top_tool_bar.h
app/gui/widget/: timeline_widget.cc  timeline_widget.h  track_content_widget.cc  track_content_widget.h  track_delegate.cc  track_delegate.h  track_detail_widget.cc  track_detail_widget.h  track_setting_widget.cc  track_setting_widget.h
app/model/: current_state_model.cc  current_state_model.h  model.cc  model.h  play_progress_model.cc  play_progress_model.h  project_model.cc  project_model.h  track_container.cc  track_container.h  track_container_model.cc  track_container_model.h
app/model/animation/: animation.cc  animation.h
app/model/center/: project_center.cc  project_center.h
app/model/clip/: clip.cc  clip.h  midi_clip.cc  midi_clip.h
app/model/database/: project_info_provider.cc  project_info_provider.h
app/model/image/: layer.cc  layer.h
app/model/music/: note.cc  note.h
app/model/track/: animation_track.cc  animation_track.h  image_track.cc  image_track.h  instrument_track.cc  instrument_track.h  painter_track.cc  painter_track.h  track.cc  (+5 more)
app/plugin/: import_filter.cc  import_filter.h  midi_import.cc  midi_import.h  plugin.cc  plugin.h
app/presenter/: current_state_presenter.cc  current_state_presenter.h  play_progress_presenter.cc  play_progress_presenter.h  play_progress_subscriber.h  play_progress_view.cc  play_progress_view.h  project_presenter.cc  project_presenter.h  track_container_presenter.cc  track_container_presenter.h  track_container_subscriber.h  track_container_view.cc  track_container_view.h
app/toolbar/: top_tool_bar.cc
app/util/: path_util.cc  path_util.h
base/: CMakeLists.txt
base/config/: build_config.h
base/files/: file_path.cc  file_path.h  file_path_test.cc  file_util.cc  file_util.h
base/functional/: bind.h
base/memory/: aligned_memory.cc  aligned_memory.h
base/string/: string_concat.h  string_concat_test.cc  string_piece.cc  string_piece.h  string_util.cc  string_util.h  string_util_impl_helper.h  utf_string_conversion.cc  utf_string_conversion.h  utf_string_conversion_test.cc  utf_string_conversion_util.h
base/time/: time_delta.cc  time_delta.h
core/: CMakeLists.txt
core/geometry/: point.cc  point.h  rect.cc  rect.h  size.cc  size.h
core/math/: constant.h  music_constant.h
core/midi/: midi.h  midi_event.h  midi_event_processor.h
core/util/: utility_function.h
media/: CMakeLists.txt
media/base/: audio_bus.cc  audio_bus.h  audio_bus_test.cc  audio_constant.h  audio_parameters.cc  audio_parameters.h  color_plane_layout.cc  color_plane_layout.h  decoder.h  decoder_buffer.cc  decoder_buffer.h  decoder_buffer_queue.cc  decoder_buffer_queue.h  decoder_buffer_queue_test.cc  decoder_buffer_test.cc  test_data_util.cc  test_data_util.h  test_helper.cc  test_helper.h  video_aspect_ratio.cc  video_aspect_ratio.h  video_decoder.cc  video_decoder.h  video_decoder_config.cc  video_decoder_config.h  video_frame.cc  video_frame.h  video_frame_layout.cc  video_frame_layout.h  video_frame_layout_test.cc  video_frame_pool.cc  video_frame_pool.h  video_frame_pool_test.cc  video_frame_test.cc  video_parameters.cc  video_parameters.h  video_types.cc  video_types.h
media/filters/: ffmpeg_audio_decoder.cc  ffmpeg_audio_decoder.h  ffmpeg_audio_decoder_test.cc  ffmpeg_audio_encoder.cc  ffmpeg_audio_encoder.h  ffmpeg_audio_encoder_test.cc  ffmpeg_glue.cc  ffmpeg_glue.h  ffmpeg_video_decoder.cc  ffmpeg_video_decoder.h  ffmpeg_video_decoder_test.cc  ffmpeg_video_encoder.cc  ffmpeg_video_encoder.h  ffmpeg_video_encoder_test.cc
module/: CMakeLists.txt
module/audio_graph/: audio_bridge.cc  audio_bridge.h  audio_context.cc  audio_context.h  audio_writer_node.cc  audio_writer_node.h  constant.h  gain_node.cc  gain_node.h  master_track.cc  master_track.h  metronome_node.cc  metronome_node.h  mixer.cc  mixer.h  oscillator.cc  oscillator.h  oscillator_node.cc  oscillator_node.h  piano_node.cc  piano_node.h  processor_base.h  time_stretch_node.cc  time_stretch_node.h  track.cc  track.h
platform/conan/audio_graph/: CMakeLists.txt  conanfile.py  hello.cc  hello.h
platform/profile/: ios_profile
res/: application.qrc
res/midi/: wind_blowing.mid
script/: build_project.py
tools/: CMakeLists.txt
tools/image/: action_new_dialog.cc  action_new_dialog.h  cover_editor.cc  cover_graphics_scene.cc  cover_graphics_scene.h  cover_graphics_view.cc  cover_graphics_view.h  layer.cc  layer.h  layer_button.cc  layer_button.h  layer_choice.cc  layer_choice.h  layer_label.cc  layer_label.h  layer_tool.cc  layer_tool.h  layer_widget.cc  layer_widget.h  left_widget.cc  left_widget.h  main.cc  main_window.cc  main_window.h  property_widget.cc  property_widget.h  right_widget.cc  right_widget.h  size_style.h  template_widget.cc  template_widget.h
ui/menu/: about_dialog.cc  about_dialog.h
ui/model/: clip.cc  clip.h  instrument_track.cc  instrument_track.h  midi_clip.cc  midi_clip.h  model.cc  model.h  model_view.cc  model_view.h  note.cc  note.h  piano.cc  piano.h  song.cc  song.h  time_pos.cc  time_pos.h  track.cc  track.h  track_container.cc  track_container.h
ui/plugin/: import_filter.cc  import_filter.h  instrument.cc  instrument.h  midi_import.cc  midi_import.h  plugin.cc  plugin.h
view/widgets/: character_window.cc  character_window.h  main_window.cc  main_window.h  waveform_widget.cc  waveform_widget.h  widget_constant.h
(+76 files in other folders)
